cluster/manifests/databases/cloudnative-pg/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: databases
  annotations:
    coredns.io/hostname: "postgres.${EXTERNAL_DOMAIN}"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerIP: "${LB_POSTGRES}"
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    postgresql: postgres
    role: primary
